<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/playfair_display"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/text"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/age"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/gray"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

        
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:max="120"
        android:id="@+id/sbAge"
        android:layout_marginTop="20dp"
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/line_shape"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="25dp"
        android:text="@string/jeunez"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

    <RadioButton
        android:id="@+id/rbtOui"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/oui"
        android:textColor="@color/black"
        android:textSize="20sp" />
        <RadioButton
        android:id="@+id/rbtNon"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:checked="false"
        android:text="@string/non"
        android:textColor="@color/black"
        android:textSize="20sp" />
    </RadioGroup>
    <EditText
        android:id="@+id/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
    />
    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:text="@string/submit"
    />
    <TextView
        android:id="@+id/tvReponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:padding="40dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>